--- a/app/src/main/res/layout/grid_menu_layout.xml
+++ b/app/src/main/res/layout/grid_menu_layout.xml
@@ -24,7 +24,7 @@
             android:id="@+id/tv_grid_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/iv_icon"
+            app:layout_constraintTop_toBottomOf="@id/iv_grid_item_icon"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
