--- a/app/src/main/res/layout/list_menu_layout.xml
+++ b/app/src/main/res/layout/list_menu_layout.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:paddingVertical="5dp"
         android:paddingHorizontal="8dp"
         android:id="@+id/layout_list_menu"
@@ -23,7 +22,7 @@
     <!--标题-->
     <TextView
             android:id="@+id/tv_list_item_title"
-            app:layout_constraintLeft_toRightOf="@id/iv_icon"
+            app:layout_constraintLeft_toRightOf="@id/iv_list_item_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
