--- a/app/src/main/res/layout/wifi_info_layout.xml
+++ b/app/src/main/res/layout/wifi_info_layout.xml
@@ -3,44 +3,48 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/layout_wifi_info"
-        android:padding="3dp"
+        android:padding="5dp"
         android:layout_margin="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+    <!--名称-->
     <TextView
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_bssid"
             android:id="@+id/tv_ssid"
-            android:layout_width="match_parent"
+            android:textSize="@dimen/title_size"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+
+    <ImageView
+            app:layout_constraintLeft_toRightOf="@id/tv_ssid"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/tv_bssid"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/iv_frequency"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"/>
+
+    <!--Mac地址-->
     <TextView
             app:layout_constraintTop_toBottomOf="@id/tv_ssid"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/tv_level"
+            android:layout_marginTop="5dp"
             android:id="@+id/tv_bssid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+
+    <!--信号强度-->
     <TextView
-            app:layout_constraintTop_toBottomOf="@id/tv_bssid"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/tv_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    <TextView
-            app:layout_constraintTop_toBottomOf="@id/tv_level"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/tv_operatorFriendlyName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    <TextView
-            app:layout_constraintTop_toBottomOf="@id/tv_operatorFriendlyName"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:id="@+id/tv_venueName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"/>
+
 </android.support.constraint.ConstraintLayout>
