--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -6,4 +6,5 @@
     <dimen name="header_icon_size">65dip</dimen>
     <dimen name="tab_height">50dip</dimen>
     <dimen name="default_margin_top">10dip</dimen>
+    <dimen name="default_padding">20dip</dimen>
 </resources>
