--- a/app/src/main/res/layout/activity_scan_device.xml
+++ b/app/src/main/res/layout/activity_scan_device.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.activity.DeviceScanActivity">
+        tools:context=".ui.activity.ScanDeviceActivity">
 
     <include android:id="@+id/layout_top_navigation" layout="@layout/include_top_navigation"/>
 
