--- a/app/src/main/res/layout/device_info_layout.xml
+++ b/app/src/main/res/layout/device_info_layout.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/layout_wifi_info"
+        android:id="@+id/layout_device_info"
         android:padding="5dp"
         android:layout_margin="3dp"
         android:layout_width="match_parent"
@@ -18,6 +18,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
+    <!--设备类型-->
+    <TextView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/tv_name"
+            android:layout_marginLeft="@dimen/default_padding"
+            android:textSize="@dimen/title_small_size"
+            android:id="@+id/tv_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
     <!--Mac地址-->
     <TextView
             app:layout_constraintTop_toBottomOf="@id/tv_name"
@@ -29,13 +39,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    <!--信号强度-->
-    <TextView
+    <!--查看uuid-->
+    <ImageView
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:id="@+id/tv_type"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"/>
+            android:src="@mipmap/ic_right"
+            android:id="@+id/iv_more"
+            android:layout_width="@dimen/icon_size"
+            android:layout_height="@dimen/icon_size"/>
 
 </android.support.constraint.ConstraintLayout>
