--- a/app/src/main/res/values/size.xml
+++ b/app/src/main/res/values/size.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="title_size">18dip</dimen>
+    <dimen name="title_small_size">12dip</dimen>
     <dimen name="title_height_size">45dip</dimen>
     <dimen name="icon_size">22dip</dimen>
     <dimen name="header_icon_size">65dip</dimen>
