--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -24,6 +24,15 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
+    <cn.jinelei.rainbow.ui.view.CircleImageView
+            app:layout_constraintTop_toBottomOf="@id/dv_test"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:src="@drawable/test"
+            app:defaultBorderWidth="10"
+            app:defaultBorderColor="@color/colorAccent"
+            android:layout_width="50dp" android:layout_height="50dp"/>
+
     <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab_refresh"
             android:src="@mipmap/ic_refresh"
