--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -14,4 +14,10 @@
         <attr name="paddingVertical" format="float"/>
         <attr name="padding" format="float"/>
     </declare-styleable>
+
+    <declare-styleable name="CircleImageView">
+        <attr name="defaultBorderWidth" format="integer"/>
+        <attr name="defaultBorderColor" format="color"/>
+        <attr name="defaultBitmap" format="integer"/>
+    </declare-styleable>
 </resources>
